--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 h1 {
+    display: flex;
+    justify-content: center;
     font-size: 54px;
     text-align: center;
     text-decoration: underline;
     text-decoration-style: wavy;
     font-family: 'Luckiest Guy', cursive;
     text-shadow: 0px 0px 15px rgb(200,50,100);
+    margin: 1%;
   }
 
 h2 {
@@ -19,25 +22,22 @@ h3 {
 }
 
 .post {
-    margin: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
+    margin: 5px;
+    padding: 5px 0.5% 5px 0.5%;
     background-color: rgb(245,235,245);
     border: solid;
     border-radius: 5px;
     border-color: black;
     border-width: 2px;
-    width:60%;
+    width:100%;
 }
 
 .entry {
   margin: 1%;
   display: inline-block;
-  vertical-align: top; /* or top or bottom */
+  vertical-align: top;
   float: left;
-  max-width: 60%;
+  max-width: 65%;
 }
 
 body {
@@ -59,11 +59,28 @@ body {
 }
 
 .ad {
-  width: min-content;
-  float:right;
-  padding-left:5%;
+  width: 100%;
+  float: right;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 
-::content {
-  float:left;
+#content {
+  display: block;
+  float: left;
+  width: 70%;
+  margin: 2%;
+  margin-top: 5px;
+}
+
+#side {
+  float: right;
+  width: 25%;
+  justify-content: center;
+  margin: 2%;
+  margin-top: 5px;
+}
+
+#blog {
+  display:flex;
 }
