--- a/style.css
+++ b/style.css
@@ -21,19 +21,19 @@ h3 {
   margin: 1%;
 }
 
-.post {
+.blog__post {
     margin: 5px;
-    padding: 5px 0.5% 5px 0.5%;
-    background-color: rgb(245,235,245);
+    padding: 5px 0.5%;
+    background-color: rgb(245, 230, 245);
     border: solid;
-    border-radius: 5px;
+    border-radius: 7px;
     border-color: black;
     border-width: 2px;
     width:100%;
 }
 
-.entry {
-  margin: 1%;
+.post__entry {
+  margin: 1% 5px;
   display: inline-block;
   vertical-align: top;
   float: left;
@@ -41,15 +41,17 @@ h3 {
 }
 
 body {
-    background-color: rgb(245,225,245);
+    background-color: rgb(245,220,245);
     font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
-.postimage {
-    width:30%;
+.post__image {
+   min-width: 10%;
+    max-width:30%;
     border-radius: 2%;
     float:right;
-    margin:1%;
+    margin:1% 5px;
+    max-height: 10%;
   }
 
 .clearfix::after {
@@ -65,22 +67,21 @@ body {
   margin-top: 5px;
 }
 
-#content {
+#blog__content {
   display: block;
   float: left;
-  width: 70%;
-  margin: 2%;
-  margin-top: 5px;
+  width: 75.5%;
+  margin: 5px 15px 0 0; /*top right bottom left*/
 }
 
-#side {
+#blog__side {
   float: right;
-  width: 25%;
+  width: 20%;
   justify-content: center;
-  margin: 2%;
-  margin-top: 5px;
+  margin: 5px 0 0 1%; /*top right bottom left (left uses a percentage here because i think it looks better as the screen size scales)*/
 }
 
 #blog {
-  display:flex;
+  display: flex;
+  justify-content: center;
 }
