--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 .post__entry {
-  margin: 1% 5px;
+  margin: 1% 0.5%;
   display: inline-block;
   vertical-align: top;
   float: left;
@@ -50,7 +50,7 @@ body {
     max-width:30%;
     border-radius: 2%;
     float:right;
-    margin:1% 5px;
+    margin:1% 0.5%;
     max-height: 10%;
   }
 
